--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -4,16 +4,11 @@
   display: none;
 }
 
-.voting-category .topic-list .pinned .topic-excerpt {
-  margin-left: 65px;
-}
-
 .voting-category.list-container {
-  
   @if $use_compact_width == "true" {
     max-width: $small-width;
   }
-  
+
   margin: 0 auto;
 
   .posters,
@@ -22,15 +17,11 @@
     display: none;
   }
 
-  [data-topic-vote-count]:before {
-    content: attr(data-topic-vote-count);
-    position: absolute;
-    margin-left: 1.85em;
-    margin-top: 2.35em;
-    font-size: $font-up-1;
-  }
+  .topic-list-item:not(.non-voting) {
+    &.pinned .topic-excerpt {
+      margin-left: 65px;
+    }
 
-  .topic-list-item:not(.about-topic) {
     td.main-link {
       display: flex;
       flex-direction: column;
@@ -38,7 +29,7 @@
     }
 
     .link-top-line {
-      display: flex; 
+      display: flex;
     }
 
     .title.raw-link.raw-topic-link {
@@ -62,6 +53,7 @@
     .vote-count-before-title {
       display: flex;
       justify-content: center;
+      flex-direction: column;
       color: $primary;
       padding: 10px 0;
       border: 1px solid $primary-low;
@@ -74,9 +66,10 @@
       .svg-icon {
         font-size: $font-up-6;
         color: $primary-low;
-        display: block;
+        display: flex;
+        align-self: center;
         height: 40px;
-        margin-top: -18px;
+        margin: -10px;
       }
 
       &[data-user-voted="true"] .svg-icon {
@@ -87,7 +80,7 @@
     .topic-statuses {
       margin-left: 65px;
       & + .title.raw-link.raw-topic-link {
-          margin: 0;
+        margin: 0;
       }
     }
   }
