--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -32,6 +32,10 @@
       display: flex;
     }
 
+    .link-bottom-line {
+      margin-left: 65px;
+    }
+
     .title.raw-link.raw-topic-link {
       display: block; // prevents wrapping on top of vote count
       padding: 0;
@@ -39,8 +43,6 @@
     }
 
     .discourse-tags {
-      margin-left: 65px;
-
       // Hide commma
       .discourse-tag:after {
         display: none;
