Various fixes and improvements
- Ensure there is a tooltip hint explaining why users can't vote on unseen topics
- Ensure the vote control within a topic updates when a user runs out of votes after voting from the topic list
- Fix a couple of other edge cases with the tooltip hints
- Run prettier on js and scss files

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -47,7 +47,7 @@
       margin-left: 65px;
 
       .discourse-tag {
-        margin: .35em 0;
+        margin: 0.35em 0;
         // Hide commma
         &:after {
           display: none;
@@ -93,13 +93,6 @@
         &.disabled {
           cursor: default;
         }
-      }
-    }
-
-    &:not(.visited) {
-      .topic-list-vote-button {
-        cursor: default;
-        pointer-events: none;
       }
     }
 
