UI: hide category when filtering voting category by tag
The category badge in topic list items was causing some layout issues. It shouldnt be necessary to include it when filtering a voting category.

Also fixes a minor issue with spacing between multiple tags.

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -37,6 +37,12 @@
       display: flex;
     }
 
+    .link-bottom-line {
+      .badge-category__wrapper {
+        display: none;
+      }
+    }
+
     .title.raw-link.raw-topic-link {
       display: block; // prevents wrapping on top of vote count
       padding: 0;
@@ -47,7 +53,7 @@
       margin-left: 65px;
 
       .discourse-tag {
-        margin: 0.35em 0;
+        margin: .35em .5em 0 0;
         // Hide commma
         &:after {
           display: none;
